<resources>
    <string name="app_name">HFB Mobile Banking</string>
    <string name="onARooted">HFB Mobile Banking can not run on a rooted device.</string>
    <string name="debugDetected">Debug detected.</string>
    <string name="emulatorDetected">Emulator detected.</string>
    <string name="xposedDetected">XPOSED detected.</string>
    <string name="customFirmwareDetected">Custom firmware detected.</string>
    <string name="intergrityFailed">Intergrity failed.</string>
    <string name="wirelessSecurityCheckFailed">Wireless security check failed.</string>
    <string name="suDetected">Super User detected.</string>
    <string name="default_font" translatable="false">sans-serif-condensed</string>
    <string name="about_text">Incorporated as a private company under the Companies Act in December 1967, the Bank has become a household name and has grown in leaps and bounds with a good track record among the pioneers of a mortgage lending. National Housing &amp; Construction Corporation, a parastatal involved in real estate business has 5% shareholding and National Social Security Fund (NSSF) holds 50% and the Government of Uganda holds 45%.\n\n Today, the bank looks back with pride on the business accomplished in the mortgage lending business. Through innovation and placing emphasis on Honesty, Integrity, Efficiency and Customer care, Housing Finance Bank is the leader in the mortgage, holding a 90% market share. Housing Finance Bank is committed to maintaining its profitability and improving delivery of shelter by availing mortgage loan facilities. The company has recorded steady growth in deposits, mortgage assets and shareholder equity.\n\n The Bank\'s public deposits have been steadily increasing over the last six years from Ushs. 20.2 billion in 2003 to Ushs. 78.3 billion in 2008 while its total mortgage asset stands at Ushs 149.9 billion as at End of 2008. With the envisaged upturn in economic activities Housing Finance Bank is prepared to offer better services to clients. We are committed to provide Ugandans with a path to a home of their own through our flexible savings and mortgage schemes.</string>
    <string name="housing">Housing</string>
    <string name="finance">Finance</string>
    <string name="bank">Bank</string>
    <string name="menuOptions">Menu Options</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error">Error</string>
    <string name="alert">Alert</string>
    <string name="noLogs">No transaction logs have been saved</string>
    <string name="tranHistrory">My Transactions</string>
    <string name="pleaseConfirm">Please Confirm</string>
    <string name="date">Dec 25, 2017 12:17:25 pm</string>
    <string name="numberL10">Mobile Number must be at least 10 Characters</string>
    <string name="numInvCh">Mobile Number contains invalid characters</string>
    <string name="numStrt0">Mobile Number must start with \'0\'</string>
    <string name="refNo">Your Transaction was successful, Your ref Number is : 65435564 Please contact HFB for more info</string>
    <string name="loggingIn">Authenticating, please wait…</string>
    <string name="settings">Settings</string>
    <string name="withdraw">Withdraw Money</string>
    <string name="pin">PIN</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="contactUs">Contact Us</string>
    <string name="contactBank">Contact Bank</string>
    <string name="branches">Branches</string>
    <string name="exit">Exit App</string>
    <string name="poweredBy">Powered by Craft Silicon Limited</string>
    <string name="mtn">MTN</string>
    <string name="selectAccount">Select your Account</string>
    <string name="selectOption">Select one of the options below.</string>
    <string name="ownNumber">Own Number</string>
    <string name="otherNumber">Other Number</string>
    <string name="number">MOBILE NUMBER</string>
    <string name="amount">AMOUNT</string>
    <string name="enterAmount">Enter the Amount</string>
    <string name="enterTPin">Enter Transaction Pin</string>
    <string name="pay">Pay</string>
    <string name="accountName">Account Name :</string>
    <string name="availableBalance">Available Balance</string>
    <string name="totalBalance">Actual Balance</string>
    <string name="meterNumber">Meter Number</string>
    <string name="validate">Validate</string>
    <string name="name">Name:</string>
    <string name="headOffice">HEAD OFFICE:</string>
    <string name="ownAcc">Own Account</string>
    <string name="otherAcc">Other Account</string>
    <string name="accStatus">Account Status :</string>
    <string name="fundsTransfer">Transfer Money</string>
    <string name="balanceEnquiry">Account Balances</string>
    <string name="miniStatement">Mini Statement</string>
    <string name="airtimeServ">Airtime Services</string>
    <string name="billsPay">Pay Bills</string>
    <string name="mobileMoney">Send Mobile Money</string>
    <string name="profilePic">Set Profile Picture</string>
    <string name="dipName">Display Name</string>
    <string name="email">Email:</string>
    <string name="phoneNum">Phone Number</string>
    <string name="appActiv">APP ACTIVATION</string>
    <string name="sendKey">"Kindly enter your registered mobile number.\n\nIf you're not registered for this service, please visit the nearest branch to enroll.</string>
    <string name="enterKeySms">Kindly Enter the Activation Code / Recreate Key you received from the Bank via email or sms and your registered mobile number.</string>
    <string name="activKey">ACTIVATION / RECREATE KEY</string>
    <string name="activate">ACTIVATE</string>
    <string name="changeloginPin">CHANGE LOGIN PIN</string>
    <string name="oldpin">OLD PIN</string>
    <string name="newPin">NEW PIN</string>
    <string name="confirmPin">CONFIRM PIN</string>
    <string name="change">CHANGE</string>
    <string name="yes">Yes</string>
    <string name="loading">Loading</string>
    <string name="loading_ellipsis">Loading…</string>
    <string name="enterMeterNumber">Enter Meter Number</string>
    <string name="enterAccountNumber">Please enter your Account Number</string>
    <string name="make">You are about to make</string>
    <string name="forAmount">for an amount of UGX</string>
    <string name="proceedYN">Press YES to proceed or CANCEL to stop the transaction.</string>
    <string name="mainMenu">Main Menu</string>
    <string name="aboutUs">About Us</string>
    <string name="purchaseTopup">You are about to purchase</string>
    <string name="paymentCancelled">Payment Cancelled</string>
    <string name="myProfile">My Profile</string>
    <string name="addProfilepic">Add Profile Picture</string>
    <string name="takePhoto">Take Photo</string>
    <string name="chooseFrmLib">Choose from Library</string>
    <string name="removePic">Remove Picture</string>
    <string name="cancel">Cancel</string>
    <string name="invalidInput">Invalid input, please try again</string>
    <string name="invalidRKey">Invalid Recreate Key</string>
    <string name="sureContinue">Are you sure you wish to continue without changing your pin ?</string>
    <string name="sureExit">Are you sure you wish to Log out ?</string>
    <string name="processingReq">Processing your request, please wait…</string>
    <string name="processingTrx">Processing your transaction, please wait.</string>
    <string name="noPermission">You have not granted the app permission to use this feature.</string>
    <string name="ok">OK</string>
    <string name="unexpectedError">An error occurred while processing your request, please try again in a few minutes.</string>
    <string name="tryAgain">Sorry. We are unable to complete your request at the moment, please try again in a few minutes.</string>
    <string name="tokenTryLater">Sorry. We are unable to create a session at the moment, please try again in a few minutes.</string>
    <string name="connectionError">Kindly check your internet connection and try again. Contact the Bank if the problem persists.</string>
    <string name="logOut">Log Out</string>
    <string name="welcome">Welcome</string>
    <string name="firstLogin">Kindly change your pin.</string>
    <string name="loginNpin">Kindly Login with your new pin</string>
    <string name="notAccPin">Not acceptable pin change inputs, please try again</string>
    <string name="invalidMobileNo">Invalid Mobile Number</string>
    <string name="selectAccDebited">Select Account to Transfer Money From</string>
    <string name="enterValidAmount">Please enter a valid Amount</string>
    <string name="enterValidPin">Please enter a valid Pin</string>
    <string name="sameAccError">Kindly note you cannot send funds into the same account</string>
    <string name="enterValidAcc">Please enter a valid account number</string>
    <string name="enterValidAccMet">PLease enter a valid account/meter number</string>
    <string name="fromAccNo">debited from account number</string>
    <string name="accountNumber">Account Number</string>
    <string name="bankRequests">My Requests</string>
    <string name="createSOdr">Create Standing Order</string>
    <string name="stopSOdr">Stop Standing Order</string>
    <string name="stndOrds">Standing Orders</string>
    <string name="selectAccCredited">Please select the account to be Credited</string>
    <string name="startdate">Select the start date</string>
    <string name="endDate">Select the end date</string>
    <string name="frequency">Frequency</string>
    <string name="create">Create</string>
    <string name="account">ACCOUNT</string>
    <string name="dateTXT">DATE:</string>
    <string name="type">TYPE:</string>
    <string name="credit">CREDIT</string>
    <string name="debit">DEBIT</string>
    <string name="sendMoney">Send Money</string>
    <string name="selectFile">Select File</string>
    <string name="sendingDetails">Verifying your details, Please wait</string>
    <string name="fetchStdOrds">Fetching all Standing orders, please wait.</string>
    <string name="daily">Daily</string>
    <string name="selectOne">Select One   ↓ </string>
    <string name="weekly">Weekly</string>
    <string name="fotnight">Fortnightly</string>
    <string name="monthly">Monthly</string>
    <string name="enterPIn">Please type in your PIN</string>
    <string name="atmLocations">ATM Locations</string>
    <string name="enteryour">Kindly enter your</string>
    <string name="STEP_1_VALIDATION">STEP 1. VALIDATION</string>
    <string name="STEP_2_CONFIRMATION">STEP 2. CONFIRMATION</string>
    <string name="confirmPayInfo">Kindly confirm your account details below</string>
    <string name="STEP_3_PAYMENT">STEP 3. PAYMENT</string>
    <string name="EnterAmount">Enter the Amount you wish to pay</string>
    <string name="enterAct">Kindly enter the activation key received.</string>
    <string name="verify">Verify</string>
    <string name="actKey">ACTIVATION / RECREATE KEY</string>
    <string name="prepaid_card">Prepaid Card</string>
    <string name="agents">Agents</string>
    <string name="mbagilawa">Mbagilawo</string>
    <string name="account_opening">Account Opening</string>
    <string name="let_apos_s_get_started_gt"><![CDATA[Let\'s Get Started >]]></string>
    <string name="region">Region</string>
    <string name="district_name">District Name</string>
    <string name="county_name">County Name</string>
    <string name="subcounty_name">SubCounty Name</string>
    <string name="parish_name">Parish Name</string>
    <string name="village_name">Village Name</string>
    <string name="ea_name">EA Name</string>
    <string name="address">Address</string>
    <string name="selectBouquet">Select Bouquet</string>
    <string name="enterMeter">Enter Meter Number</string>
    <string name="selectSavedBen">Select Saved Beneficiary</string>
</resources>